fix: wrap text

--- a/microservices/front-end/src/components/QuestionBank.module.css
+++ b/microservices/front-end/src/components/QuestionBank.module.css
@@ -159,3 +159,8 @@ button:focus-visible {
   width: 80%;
   margin: auto;
 }
+
+.wrapText > * {
+  /* the code snippets in the question details should wrap */
+  text-wrap: wrap;
+}
